fix: improve spectator respawn and lobby return